# croos-platform-apps

./: .gitignore  README.md
lectures/: lecture02.md  lecture03.md  lecture04.md  lecture07.md  lecture08.md
projects/: lab03.sublime-workspace
projects/lab01/: Makefile  test-sort.sublime-project  test-sort.sublime-workspace
projects/lab01/_build/: build.sh  test-sort  test-sort.sublime-workspace
projects/lab01/_build/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
projects/lab01/_build/cmake-build/awesome-sort/: Makefile  cmake_install.cmake
projects/lab01/_build/cmake-build/test-sort/: Makefile  cmake_install.cmake  test-sort
projects/lab01/task13/: CMakeLists.txt  Makefile
projects/lab01/task13/awesome-sort/: CMakeLists.txt  Makefile  awesome-sort.cpp  awesome-sort.h
projects/lab01/task13/test-sort/: CMakeLists.txt  Makefile  test-sort.cpp
projects/lab02/: build.sh  qt.sublime-project  qt.sublime-workspace
projects/lab02/sources/: CMakeLists.txt  aboutdialog.cpp  canvas.cpp  canvas.h  main_window.cpp
projects/lab03/: build.sh  qt.sublime-workspace
projects/lab03/sources/: CMakeLists.txt  editablefilesystemmodel.cpp  editablefilesystemmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mdichild.cpp  mdichild.h  zipmodel.h
projects/lab04/: CMakeLists.txt  canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  workerthread.cpp
projects/lab04-build/: CMakeCache.txt  Makefile  cmake_install.cmake  lab04  lab04.cbp  moc_canvas.cpp  moc_canvas.cpp_parameters  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters  moc_workerthread.cpp  moc_workerthread.cpp_parameters  ui_mainwindow.h
projects/qt01/: Makefile
projects/qt01/task13/: Makefile
projects/qt01/task13/awesome-sort/: awesome-sort.h
projects/qt01/task13/test-sort/: Makefile  test-sort.h
projects/qt02/: .sublime-workspace  build.sh  qt.sublime-workspace  qt02.sublime-project
projects/qt02/sources/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
qt-creator/build-lab02-Desktop_Qt_5_3_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp
qt-creator/build-lab02-Desktop_Qt_5_3_clang_64bit-Debug/lab02.app/Contents/: Info.plist
qt-creator/build-lab02-Desktop_Qt_5_3_clang_64bit-Debug/lab02.app/Contents/MacOS/: lab02
qt-creator/lab02/: aboutdialog.h  canvas.cpp  canvas.h  inputdialog.cpp  inputdialog.h  lab02.pro  mainwindow.cpp  mainwindow.h
qt-creator/lab03/: aboutdialog.ui  lab03.pro  lab03_en_US.qm  lab03_en_US.ts  main-window.cpp  main-window.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mdichild.cpp  mdichild.h  zipitem.cpp  zipitem.h  zipmodel.cpp  zipmodel.h  zipmodel.h.autosave
qt-creator/lab04/: canvas.cpp  canvas.h  lab04.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  workerthread.cpp  workerthread.h
